Fix global link for pdb-redo.eu simplify index

--- a/docroot/menu.html
+++ b/docroot/menu.html
@@ -5,7 +5,7 @@
 <body>
 
 	<header z2:fragment="navbar(page)" class="d-flex">
-		<a href="https://pdb-redo.eu/" z2:href="@{/}"><img z2:src="@{/images/PDB_logo_rect_medium.svg}" /></a>
+		<a href="https://pdb-redo.eu/"><img z2:src="@{/images/PDB_logo_rect_medium.svg}" /></a>
 		<div>
 			<div class="my-overflow">
 
@@ -31,7 +31,7 @@
 
 						<li class="nav-item">
 							<a class="nav-link" z2:classappend="${page == 'home' ? 'active' : ''}"
-								z2:href="@{/}">Home</a>
+								href="https://pdb-redo.eu/">Home</a>
 						</li>
 
 						<li class="nav-item dropdown">
