Added a bacic description. Menu now points to PDB-REDO.

--- a/docroot/index.html
+++ b/docroot/index.html
@@ -18,7 +18,7 @@
 		<article>
 			<h2>DSSP: Assign secondary structure to proteins</h2>
 
-			<p>bla bla bla
+			<p>DSSP (Dictionary of Secondary Structure in Proteins) is an algorithm originally designed by Wolfgang Kabsch and Chris Sander to standardise secondary structure assigment based on atomic coordinates. DSSP does not predict secondary structure. You can run DSSP using the form below or you can <a z2:href="@{/download}">install</a> the program locally. Ready-made annotations of PDB entries are available below and you can also <a z2:href="@{/download}">download</a> the whole databank at once. More details about the DSSP output are <a z2:href="@{/about}">here</a>.  
 			</p>
 		</article>
 
