--- a/docroot/menu.html
+++ b/docroot/menu.html
@@ -31,7 +31,7 @@
 
 						<li class="nav-item">
 							<a class="nav-link" z2:classappend="${page == 'home' ? 'active' : ''}"
-								href="https://pdb-redo.eu/">Home</a>
+								href="https://pdb-redo.eu/dssp">Home</a>
 						</li>
 
 						<li class="nav-item dropdown">
@@ -42,7 +42,7 @@
 
 							<ul class="dropdown-menu m-0" aria-labelledby="navbarDropdown2">
 								<li><a class="dropdown-item" href="https://alphafill.eu">AlphaFill</a></li>
-								<li><a class="dropdown-item" href="https://pdb-redo.eu/dssp">DSSP</a></li>
+								<li><a class="dropdown-item" href="https://pdb-redo.eu">PDB-REDO</a></li>
 								<li><a class="dropdown-item" href="https://pdb-redo.eu/tortoize">Tortoize</a></li>
 								<li><a class="dropdown-item" href="https://ccd.rhpc.nki.nl/">CCD</a></li>
 								<li><a class="dropdown-item" href="https://pdb-redo.eu/archive">Archive</a></li>
