Changed the URL for the mkdssp binary.

--- a/docroot/download.html
+++ b/docroot/download.html
@@ -21,7 +21,7 @@
 
 			<p>If you want to run large sets of DSSP calculations you can install DSSP locally by:
 			<ul>
-				<li>Downloading the current <a href="https://pdb-redo.eu/others/pdb-redo.tar.bz2">Linux and WSL binary</a></li>
+				<li>Downloading the current <a href="https://pdb-redo.eu/dssp/others/mkdssp.gz">Linux and WSL binary</a></li>
 				<li>Building DSSP from <a href="https://github.com/PDB-REDO/dssp">source</a></li>
 				<li>Installing the <a href="https://launchpad.net/ubuntu/+source/dssp">Debian/Ubuntu package</a> (note that this version is a bit older)</li>
 				<li>Installing the <a href="https://www.ccp4.ac.uk/">CCP4 suite</a> that comes with (an older version of) DSSP</li>
