fix link construction

--- a/docroot/download.html
+++ b/docroot/download.html
@@ -35,8 +35,8 @@
 		<article>
 			<h2>Downloading ready-made DSSP annotations</h2>
 
-			For your convenience we have already run DSSP on the entire Protein Data Bank. All entries are available in <a z2:href="|@{/about}#mmCIF|">mmCIF format</a> 
-			and, if they fit, in the <a z2:href="|@{/about}#DSSP|">legacy DSSP format.</a>
+			For your convenience we have already run DSSP on the entire Protein Data Bank. All entries are available in <a z2:href="@{/about#mmCIF}">mmCIF format</a> 
+			and, if they fit, in the <a z2:href="@{/about#DSSP}">legacy DSSP format.</a>
 
 			<h2>Manual download (single entries) via the website or using <code>wget</code>:</h2>
 			<ul>
