Added a description of the DSSP output and some references.

--- a/docroot/download.html
+++ b/docroot/download.html
@@ -38,7 +38,7 @@
 			For your convenience we have already run DSSP on the entire Protein Data Bank. All entries are available in <a z2:href="@{/about#mmCIF}">mmCIF format</a> 
 			and, if they fit, in the <a z2:href="@{/about#DSSP}">legacy DSSP format.</a>
 
-			<h2>Manual download (single entries) via the website or using <code>wget</code>:</h2>
+			<h2>Manually download (single entries) via the website or using <code>wget</code>:</h2>
 			<ul>
 				<li><code>wget https://pdb-redo.eu/dssp/9xyz.cif.gz</code> downloads annotated mmCIF file</li>
 				<li><code>wget https://pdb-redo.eu/dssp/9xyz.dssp</code> downloads the legacy DSSP file (if available)</li>
