--- a/docroot/license.html
+++ b/docroot/license.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html SYSTEM "about:legacy-compat" [
-<!ENTITY nbsp "&#160;">
-]>
+<!DOCTYPE html SYSTEM "about:legacy-compat">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:z2="http://www.hekkelman.com/libzeep/m2" lang="nl">
 
@@ -12,16 +10,10 @@
 </head>
 
 <body class="site">
-	<nav z2:replace="~{menu :: navbar('about')}" />
+	<nav z2:replace="~{menu :: navbar('about')}"></nav>
 
 	<div class="container site-content">
 
-		<article>
-			<h2>General</h2>
-
-			<!-- <p>This is the DSSP web server. Before using it, please read the <a z2:href="@{/privacy-policy}">privacy policy</a>.</p> -->
-		</article>
-				
 		<article>
 			<h2>Usage Policy</h2>
 
