Textual corrections on about and formatting corrections on download.

--- a/docroot/about.html
+++ b/docroot/about.html
@@ -171,9 +171,9 @@ AUTHOR    Y.Patskovsky; R.Toro; M.Gilmore; S.Miller; J.M.Sauder; S.C.Almo; S.K.B
 				that is not yet marked, and its partner are both marked <em>b</em>, etcetera. Unbridged cysteines remain
 				marked as <em>C</em>.</p>
 
-			<h3>S (first column in STRUCTURE block)</h3>
-			<p>The one-letter summary of secondary structure, intended to approximate crystallographers' intuition,
-				based on columns 19-38, which are the principal
+			<h3>STRUCTURE</h3>
+			<p>The first column (under the <em>S</em>) gives aone-letter summary of secondary structure, intended to approximate 
+				crystallographers' intuition. This summary is based on the next 8 columns, which are the principal
 				result of DSSP analysis of the atomic coordinates. More details in the Kabsch and Sander paper.</p>
 
 			<h3>BP1 and BP2</h3>
@@ -182,7 +182,7 @@ AUTHOR    Y.Patskovsky; R.Toro; M.Gilmore; S.Miller; J.M.Sauder; S.C.Almo; S.K.B
 
 
 			<h3>ACC</h3>
-			<p>Water exposed surface in Angstrom**2. <em>Note:</em>The values for solvent exposure may not mean what you
+			<p>Water exposed surface in &Aring;ngstr&ouml;m<sup>2</sup>. <em>Note:</em>The values for solvent exposure may not mean what you
 				think:
 			<ul>
 				<li>Effects leading to larger than expected values: solvent exposure calculation ignores unusual
