--- a/docroot/download.html
+++ b/docroot/download.html
@@ -35,16 +35,16 @@
 		<article>
 			<h2>Downloading ready-made DSSP annotations</h2>
 
-			For your convenience we have already run DSSP on the entire Protein Data Bank. All entries are available in <a z2:href="@{/about#mmCIF}">mmCIF format</a> 
-			and, if they fit, in the <a z2:href="@{/about#DSSP}">legacy DSSP format.</a>
+			<p>For your convenience we have already run DSSP on the entire Protein Data Bank. All entries are available in <a z2:href="@{/about#mmCIF}">mmCIF format</a> 
+			and, if they fit, in the <a z2:href="@{/about#DSSP}">legacy DSSP format.</a></p>
 
-			<h2>Manually download (single entries) via the website or using <code>wget</code>:</h2>
+			<h3>Manually download (single entries) via the website or using <code>wget</code>:</h3>
 			<ul>
 				<li><code>wget https://pdb-redo.eu/dssp/9xyz.cif.gz</code> downloads annotated mmCIF file</li>
 				<li><code>wget https://pdb-redo.eu/dssp/9xyz.dssp</code> downloads the legacy DSSP file (if available)</li>
 			</ul>
 
-			<h2>Download entire DSSP databank using <code>rsync</code>:</h2>
+			<h3>Download entire DSSP databank using <code>rsync</code>:</h3>
 			<ul>
 				<li><code>rsync -av rsync://rsync.pdb-redo.eu/dssp/ dssp/</code> downloads the entire archive.
 				</li>
